--- a/packages/js-draw/src/toolbar/EdgeToolbar.scss
+++ b/packages/js-draw/src/toolbar/EdgeToolbar.scss
@@ -147,8 +147,8 @@
 	}
 
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: inherit;
+	height: inherit;
 
 	display: flex;
 	flex-direction: column-reverse;
